# posix-path

./: .gitmodules  Makefile  README.md  Setup.hs  build.bash  cabal.project  coalmine.cabal  posix-path.cabal  stack.yaml
.github/workflows/: build-and-test.yaml  cd.yaml  ci.yaml  on-push-to-master-or-pr.yaml
actor-system/: actor-system.cabal
coalmine/: coalmine.cabal
coalmine/domain/: inter-syntax.domain.yaml  plotting.domain.yaml
coalmine/libs/main/Coalmine/: AppException.hs  ArgsParser.hs  Building.hs  CasedText.hs  CharPredicates.hs  Comms.hs  DecimalExtras.hs  DiffOf.hs  Distribution.hs  Domain.hs  ErrBuilder.hs  ErrReport.hs  ErrorReport.hs  EvenSimplerPaths.hs  EvenSimplerPathsClasses.hs  EvenSimplerPathsClassesLaws.hs  FileSystem.hs  Formatting.hs  Gen.hs  GithubActionKit.hs  HCurrying.hs  HappyPathIO.hs  HashableExtras.hs  HeadedMegaparsecExtras.hs  Inter.hs  InternalPrelude.hs  Interpreter.hs  Interval.hs  IsomorphismClassInstances.hs  IsomorphismClasses.hs  IsomorphismClassesOptics.hs  Isomorphisms.hs  Json.hs  JsonEncoder.hs  JsonSchema.hs  LawfulConversionsInstances.hs  Lingua.hs  Literal.hs  Logger.hs  MegaparsecExtras.hs  (+29 more)
coalmine/libs/main/Coalmine/AttoparsecExtras/: Text.hs
coalmine/libs/main/Coalmine/BaseExtras/: Alternative.hs  Applicative.hs  Integer.hs  List.hs  Natural.hs  NonEmpty.hs
coalmine/libs/main/Coalmine/CerealExtras/: Compact.hs  Get.hs  Instances.hs  Put.hs
coalmine/libs/main/Coalmine/CliKit/: Clio.hs  Echo.hs
coalmine/libs/main/Coalmine/CliKit/Clio/: TerminalMarkup.hs
coalmine/libs/main/Coalmine/Comms/: Codec.hs  Readers.hs  Schema.hs  Streamers.hs  Value.hs  Writers.hs
coalmine/libs/main/Coalmine/ContainersExtras/: Map.hs  Seq.hs
coalmine/libs/main/Coalmine/DecimalExtras/: Instances.hs
coalmine/libs/main/Coalmine/EvenSimplerPaths/: AttoparsecHelpers.hs  Charsets.hs
coalmine/libs/main/Coalmine/FoldlExtras/: Fold.hs
coalmine/libs/main/Coalmine/Formatting/: Rendering.hs
coalmine/libs/main/Coalmine/HaskellCodegenKit/: Code.hs  Namespace.hs  Package.hs
coalmine/libs/main/Coalmine/HaskellCodegens/: Base.hs  Model.hs
coalmine/libs/main/Coalmine/HeadedMegaparsecExtras/: Text.hs
coalmine/libs/main/Coalmine/Inter/: Deindentation.hs  TH.hs
coalmine/libs/main/Coalmine/Inter/Syntax/: Model.hs  Parsers.hs
coalmine/libs/main/Coalmine/Located/: Rendering.hs
coalmine/libs/main/Coalmine/MachinesExtras/: Mealy.hs
coalmine/libs/main/Coalmine/Modeliero/Codegens/: Model.hs  Structure.hs
coalmine/libs/main/Coalmine/Modeliero/Compilers/: ReexportsModule.hs
coalmine/libs/main/Coalmine/Name/: Attoparsec.hs  Charsets.hs  Constants.hs  Megaparsec.hs
coalmine/libs/main/Coalmine/PosixPath/: Component.hs  Name.hs  NormalizedPath.hs  Path.hs
coalmine/libs/main/Coalmine/PtrKit/: Peeker.hs  Reader.hs  Streamer.hs  ValidatedEncoding.hs  Writer.hs
coalmine/libs/main/Coalmine/PureRandom/: Seeded.hs  SizedSeeded.hs
coalmine/libs/main/Coalmine/QuickCheckExtras/: Gens.hs
coalmine/libs/main/Coalmine/Resilience/: IO.hs
coalmine/libs/main/Coalmine/RestEasy/: BodyConsumers.hs  MimeTypeLists.hs  Responses.hs  Statuses.hs
coalmine/libs/main/Coalmine/RestEasy/AdaptedRequest/: WaiParsing.hs
coalmine/libs/main/Coalmine/StmExtras/: TBQueue.hs  TQueue.hs
coalmine/libs/main/Coalmine/TH/: Code.hs  Exp.hs  QuasiQuoter.hs
coalmine/libs/main/Coalmine/Tasty/: TestTrees.hs
coalmine/libs/main/Coalmine/Tasty/TestTrees/: Cereal.hs  HeadedMegaparsec.hs
coalmine/libs/main/Coalmine/TextExtras/: Text.hs
coalmine/libs/main/Coalmine/TimeExtras/: Conversions.hs  IO.hs
coalmine/libs/main/Coalmine/TransformersExtras/: Cont.hs  Except.hs  Reader.hs  State.hs
coalmine/libs/main/Coalmine/UnorderedContainersExtras/: HashMap.hs  HashSet.hs
coalmine/libs/main/Coalmine/VectorExtras/: Generic.hs
coalmine/libs/main/Coalmine/VectorExtras/Generic/: Mutable.hs
coalmine/libs/main/Coalmine/XmlSyntaxParser/: Attoparsec.hs
coalmine/tests/open-api-demo/: Main.hs
coalmine/tests/tasty/: Main.hs
coalmine/tests/tasty/TestSuites/: ConduitExtras.hs  EvenSimplerPaths.hs  Inter.hs  LocatedRendering.hs  MegaparsecExtras.hs  MultilineTextBuilder.hs  Name.hs  NumericVersion.hs  PosixPath.hs  PtrKit.hs  ScientificExtras.hs  TimeExtrasConversions.hs
coalmine/tests/tasty/TestSuites/BaseExtras/: List.hs
coalmine/tests/tasty/TestSuites/CerealExtras/: Compact.hs
coalmine/tests/tasty/TestSuites/Inter/Regressions/: FromFormatica.hs
command-event/: command-event.cabal
company/: company.cabal
compiles/: compiles.cabal
contextually/: contextually.cabal
contextually/hspec/: Main.hs
doctest/: Main.hs
domain/: inter-format.domain.yaml  inter-syntax.domain.yaml  located-analysis.domain.yaml  plotting.domain.yaml  rest-easy-request.domain.yaml
download/: download.cabal
easings-dot-net/: easings-dot-net.cabal
easings-dot-net/libs/main/: EasingsDotNet.hs
format/: format.cabal
frost/: frost.cabal
hspec-extras/: hspec-extras.cabal
jet/: jet.cabal
lift-instances/: lift-instances.cabal
list-t-optics/: list-t-optics.cabal
logic/: logic.cabal
morphism-classes/: morphism-classes.cabal
open-api-demo/: Main.hs
open-api-demo/OpenApiDemo/: Model.hs
partial-isomorphism-class/: partial-isomorphism-class.cabal
partial-isomorphism-class-v2/: partial-isomorphism-class-v2.cabal
partial-isomorphism-class-v3/: partial-isomorphism-class-v3.cabal
posix-path/: README.md  posix-path.cabal
posix-path-classes/: posix-path-classes.cabal
posix-path-directory/: posix-path-directory.cabal
posix-path-structures/: posix-path-structures.cabal
posix-path-structures/tasty/: Main.hs
posix-path-structures/tests/: Main.hs
qq-extras/: qq-extras.cabal
reactor/: reactor.cabal
resilient-io/: resilient-io.cabal
rest-easy-demo/: Main.hs
rest-easy-demo/RestEasyDemo/: Model.hs
stm-fixed/: LICENSE  stm-fixed.cabal
tablo/: tablo.cabal
tablo/libs/main/Tablo/: Encoding.hs
tablo/libs/main/Tablo/Encoding/Cassava/: EncodeOptions.hs
terse-demo/: Main.hs
test/: Main.hs
unicode-class/: unicode-class.cabal
yashin/: yashin.cabal
(+147 files in other folders)
