cabal-version: 3.0

name: coalmine
version: 0.1
synopsis: My evolving toolkit that I come to projects with
description:
  Collection of unpolished utils for application development.
homepage: https://github.com/nikita-volkov/coalmine
bug-reports: https://github.com/nikita-volkov/coalmine/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Custom
extra-source-files:
  Setup.hs
  domain/*.domain.yaml

source-repository head
  type: git
  location: git://github.com/nikita-volkov/coalmine.git

-- Make the test suites dump their template-haskell splices.
flag doctest
  default: False
  manual: True

custom-setup
  setup-depends:
    Cabal >=1.10 && <4,
    base >=4.7 && <5,
    cabal-doctest >=1 && <1.1,
    filepath

common language-settings
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules:
    Coalmine.AttoparsecExtras.Text
    Coalmine.BaseExtras.Alternative
    Coalmine.BaseExtras.Applicative
    Coalmine.BaseExtras.Function
    Coalmine.BaseExtras.Integer
    Coalmine.BaseExtras.IO
    Coalmine.BaseExtras.List
    Coalmine.BaseExtras.MonadPlus
    Coalmine.BaseExtras.Monoid
    Coalmine.BaseExtras.NonEmpty
    Coalmine.Building
    Coalmine.ByteArrayArray
    Coalmine.ByteArrayArray.Ends
    Coalmine.CerealExtras.Compact
    Coalmine.CerealExtras.Get
    Coalmine.CerealExtras.Instances
    Coalmine.CerealExtras.Put
    Coalmine.CharPredicates
    Coalmine.Collector
    Coalmine.ConduitExtras
    Coalmine.ContainersExtras.IntMap
    Coalmine.ContainersExtras.Map
    Coalmine.ContainersExtras.Set
    Coalmine.DecimalExtras
    Coalmine.DecimalExtras.Instances
    Coalmine.Domain
    Coalmine.EvenSimplerPaths
    Coalmine.FoldlExtras.Fold
    Coalmine.Formatting
    Coalmine.Formatting.Rendering
    Coalmine.Fx
    Coalmine.Fx.FilePath
    Coalmine.HashableExtras
    Coalmine.HCurrying
    Coalmine.HeadedMegaparsecExtras
    Coalmine.HeadedMegaparsecExtras.Text
    Coalmine.Inter
    Coalmine.Interpreter
    Coalmine.Interval
    Coalmine.IsomorphismClass
    Coalmine.Isomorphisms
    Coalmine.JsonEncoder
    Coalmine.Located
    Coalmine.Located.Rendering
    Coalmine.MachinesExtras.Mealy
    Coalmine.MegaparsecExtras
    Coalmine.MtlExtras
    Coalmine.MultilineParser
    Coalmine.MultilineTextBuilder
    Coalmine.Name
    Coalmine.Optics
    Coalmine.Parsed
    Coalmine.Parsing
    Coalmine.PartialEndo
    Coalmine.Predicates
    Coalmine.Prelude
    Coalmine.Printing
    Coalmine.Res
    Coalmine.S3
    Coalmine.ScientificExtras
    Coalmine.SimplePaths
    Coalmine.Streamer
    Coalmine.StringIsomorphism
    Coalmine.Tasty
    Coalmine.Tasty.HeadedMegaparsec
    Coalmine.TextAppender
    Coalmine.TextIsomorphism
    Coalmine.TH.Exp
    Coalmine.TH.QuasiQuoter
    Coalmine.TimeExtras.Conversions
    Coalmine.TransformersExtras.Cont
    Coalmine.TransformersExtras.Reader
    Coalmine.TransformersExtras.State
    Coalmine.UnorderedContainersExtras.HashMap
    Coalmine.UnorderedContainersExtras.HashSet
    Coalmine.VectorExtras.Generic
    Coalmine.VectorExtras.Generic.Mutable
    Coalmine.Yaml
  other-modules:
    Coalmine.Inter.Deindentation
    Coalmine.Inter.Format.Model
    Coalmine.Inter.Format.Parsers
    Coalmine.Inter.TH
    Coalmine.InternalPrelude
    Coalmine.Name.Attoparsec
    Coalmine.Name.Megaparsec
    Coalmine.SimplePaths.AttoparsecHelpers
  build-depends:
    acc,
    aeson,
    aeson-value-parser,
    attoparsec,
    attoparsec-data,
    case-insensitive,
    cereal,
    cereal-text,
    cereal-unordered-containers,
    cereal-vector,
    conduit,
    comonad,
    data-default,
    data-dword,
    Decimal,
    deferred-folds,
    deque,
    directory,
    domain,
    domain-aeson,
    domain-cereal,
    domain-optics,
    filepath,
    foldl,
    from-sum,
    fx,
    headed-megaparsec,
    jsonifier,
    leb128-cereal,
    lens,
    machines,
    megaparsec,
    mmorph,
    moore-machines,
    neat-interpolation,
    network-ip,
    optics,
    optics-core,
    primitive,
    quickcheck-instances,
    rerebase,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    template-haskell,
    temporary,
    text-builder-dev,
    th-lego,
    time,
    tuple,
    turtle,
    vector-builder,
    vector-extras,
    vector-th-unbox,
    yaml,

test-suite doctest
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is:
    Main.hs
  other-modules:
    Build_doctests
  build-depends:
    doctest,
    rerebase
  if !flag(doctest)
    buildable: False

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:
    Main.hs
  other-modules:
    TestSuites.ConduitExtras
    TestSuites.Inter
    TestSuites.Inter.Regressions.FromFormatica
    TestSuites.LocatedRendering
    TestSuites.MegaparsecExtras
    TestSuites.SimplePaths
    TestSuites.TimeExtrasConversions
  build-depends:
    coalmine,
    conduit,
    megaparsec,
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,

