cabal-version: 3.0

name: coalmine
version: 0.1.0.16
synopsis: My evolving toolkit that I come to projects with
description:
  Collection of unpolished utils for application development.
homepage: https://github.com/nikita-volkov/coalmine
bug-reports: https://github.com/nikita-volkov/coalmine/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Custom
extra-source-files:
  Setup.hs
  domain/*.domain.yaml

source-repository head
  type: git
  location: git://github.com/nikita-volkov/coalmine.git

-- Make the test suites dump their template-haskell splices.
flag doctest
  default: False
  manual: True

custom-setup
  setup-depends:
    Cabal >=1.10 && <4,
    base >=4.7 && <5,
    cabal-doctest >=1 && <1.1,
    filepath

common language-settings
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules:
    Coalmine.AppException
    Coalmine.ArgsParser
    Coalmine.AttoparsecExtras.Text
    Coalmine.BaseExtras.Alternative
    Coalmine.BaseExtras.Applicative
    Coalmine.BaseExtras.Function
    Coalmine.BaseExtras.Integer
    Coalmine.BaseExtras.IO
    Coalmine.BaseExtras.List
    Coalmine.BaseExtras.MonadPlus
    Coalmine.BaseExtras.Monoid
    Coalmine.BaseExtras.NonEmpty
    Coalmine.Building
    Coalmine.ByteArrayArray
    Coalmine.ByteArrayArray.Ends
    Coalmine.CerealExtras.Compact
    Coalmine.CerealExtras.Get
    Coalmine.CerealExtras.Instances
    Coalmine.CerealExtras.Put
    Coalmine.CharPredicates
    Coalmine.Collector
    Coalmine.ConduitExtras
    Coalmine.ContainersExtras.IntMap
    Coalmine.ContainersExtras.Map
    Coalmine.ContainersExtras.Seq
    Coalmine.ContainersExtras.Set
    Coalmine.DecimalExtras
    Coalmine.DecimalExtras.Instances
    Coalmine.Domain
    Coalmine.ErrBuilder
    Coalmine.EvenSimplerPaths
    Coalmine.EvenSimplerPaths.AttoparsecHelpers
    Coalmine.EvenSimplerPaths.Charsets
    Coalmine.EvenSimplerPaths.IsomorphismClassHelpers
    Coalmine.EvenSimplerPaths.QuickCheckGens
    Coalmine.Fileset
    Coalmine.FoldlExtras.Fold
    Coalmine.Formatting
    Coalmine.Formatting.Rendering
    Coalmine.HappyPathIO
    Coalmine.HashableExtras
    Coalmine.HCurrying
    Coalmine.HeadedMegaparsecExtras
    Coalmine.HeadedMegaparsecExtras.Text
    Coalmine.Inter
    Coalmine.Interpreter
    Coalmine.Interval
    Coalmine.IsomorphismClassInstances
    Coalmine.Isomorphisms
    Coalmine.Json
    Coalmine.JsonEncoder
    Coalmine.JsonSchema
    Coalmine.Literal
    Coalmine.Located
    Coalmine.Located.Rendering
    Coalmine.MachinesExtras.Mealy
    Coalmine.MegaparsecExtras
    Coalmine.MtlExtras
    Coalmine.MultilineParser
    Coalmine.MultilineTextBuilder
    Coalmine.Name
    Coalmine.NameConversion
    Coalmine.NumericVersion
    Coalmine.OpenApi
    Coalmine.Optics
    Coalmine.Parsed
    Coalmine.Parsing
    Coalmine.PartialEndo
    Coalmine.Predicates
    Coalmine.Prelude
    Coalmine.Printing
    Coalmine.QuickCheckExtras.Gens
    Coalmine.Res
    Coalmine.RestEasy
    Coalmine.RestEasy.AdaptedRequest.Model
    Coalmine.RestEasy.AdaptedRequest.WaiParsing
    Coalmine.RestEasy.BodyConsumers
    Coalmine.RestEasy.MimeTypeLists
    Coalmine.RestEasy.Responses
    Coalmine.RestEasy.Statuses
    Coalmine.Result
    Coalmine.Retry.IO
    Coalmine.Retry.Strategy
    Coalmine.ScientificExtras
    Coalmine.Serialization
    Coalmine.Streamer
    Coalmine.Tasty
    Coalmine.Tasty.TestTrees
    Coalmine.Tasty.TestTrees.Cereal
    Coalmine.Tasty.TestTrees.HeadedMegaparsec
    Coalmine.TextAppender
    Coalmine.TextExtras.Text
    Coalmine.TH.Exp
    Coalmine.TH.QuasiQuoter
    Coalmine.TimeExtras.Conversions
    Coalmine.TransformersExtras.Cont
    Coalmine.TransformersExtras.Except
    Coalmine.TransformersExtras.Reader
    Coalmine.TransformersExtras.State
    Coalmine.UnorderedContainersExtras.HashMap
    Coalmine.UnorderedContainersExtras.HashSet
    Coalmine.VectorExtras.Generic
    Coalmine.VectorExtras.Generic.Mutable
    Coalmine.Yaml
  other-modules:
    Coalmine.Inter.Deindentation
    Coalmine.Inter.Syntax.Model
    Coalmine.Inter.Syntax.Parsers
    Coalmine.Inter.TH
    Coalmine.InternalPrelude
    Coalmine.Name.Attoparsec
    Coalmine.Name.Charsets
    Coalmine.Name.Constants
    Coalmine.Name.Gens
    Coalmine.Name.Megaparsec
  build-depends:
    acc,
    aeson,
    aeson-value-parser,
    attoparsec,
    attoparsec-data,
    case-insensitive,
    cereal,
    cereal-text,
    cereal-unordered-containers,
    cereal-vector,
    comonad,
    conduit,
    data-default,
    data-dword,
    Decimal,
    deferred-folds,
    deque,
    directory,
    domain,
    domain-aeson,
    domain-cereal,
    domain-optics,
    filepath,
    foldl,
    from-sum,
    ghc,
    headed-megaparsec,
    http-media,
    http-types,
    isomorphism-class,
    jsonifier,
    leb128-cereal,
    lens,
    machines,
    megaparsec,
    mmorph,
    moore-machines,
    natural-sort,
    neat-interpolation,
    network-ip,
    optics,
    optics-core,
    primitive,
    QuickCheck,
    quickcheck-instances,
    rerebase,
    semialign,
    structure-kit,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    template-haskell,
    temporary,
    text-builder-dev,
    th-lego,
    time,
    tuple,
    vector-builder,
    vector-extras,
    vector-th-unbox,
    wai,
    wai-app-static,
    wai-cors,
    warp,
    witherable,
    yaml,

test-suite doctest
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is:
    Main.hs
  other-modules:
    Build_doctests
  build-depends:
    doctest,
    rerebase
  if !flag(doctest)
    buildable: False

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:
    Main.hs
  other-modules:
    TestSuites.BaseExtras.List
    TestSuites.CerealExtras.Compact
    TestSuites.ConduitExtras
    TestSuites.EvenSimplerPaths
    TestSuites.Inter
    TestSuites.Inter.Regressions.FromFormatica
    TestSuites.LocatedRendering
    TestSuites.MegaparsecExtras
    TestSuites.MultilineTextBuilder
    TestSuites.Name
    TestSuites.NumericVersion
    TestSuites.TimeExtrasConversions
  build-depends:
    coalmine,
    conduit,
    megaparsec,
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,

test-suite open-api-demo
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: open-api-demo
  main-is:
    Main.hs
  other-modules:
    OpenApiDemo.Model
  build-depends:
    coalmine,
