cabal-version: 3.0
name: posix-path
version: 0
synopsis: Algebraic Path Data-Structure
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2023 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/posix-path

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules: PosixPath
  other-modules:
  build-depends:
    QuickCheck,
    attoparsec,
    base,
    cereal,
    posix-path:ast,
    posix-path:util,
    text-builder,

library ast
  import: base
  hs-source-dirs: src/ast
  exposed-modules:
    PosixPath.Ast.Component
    PosixPath.Ast.Name
    PosixPath.Ast.Path

  other-modules:
    PosixPath.Ast.Name.NameSegment

  build-depends:
    QuickCheck,
    attoparsec,
    cereal,
    cereal-text,
    natural-sort,
    posix-path:util,
    rerebase,
    text-builder ^>=0.6.9,

library util
  import: base
  hs-source-dirs: src/util
  exposed-modules:
    PosixPath.Util.List
    PosixPath.Util.MonadPlus
    PosixPath.Util.Prelude

  build-depends:
    QuickCheck,
    base,
    hashable,
    text,

test-suite tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/tests
  main-is: Main.hs
  build-depends:
    hspec,
    posix-path,
    quickcheck-classes,
    rerebase,
