cabal-version: 3.0
name: posix-path
version: 0
synopsis: Flexible and simple path manipulation library
description:
  Path library that:

  - Makes paths monoidally composable and provides a rich algebra
  - Avoids type-level wizardry
  - Doesn't target Windows
    - Thus maintaining focus and avoiding quirks

category: Path, FilePath, Filesystem
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2023 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/posix-path

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules: PosixPath
  other-modules:
  build-depends:
    QuickCheck >=2.14 && <3,
    attoparsec >=0.13 && <0.15,
    base >=4.14 && <5,
    cereal ^>=0.5.8.3,
    posix-path:ast,
    posix-path:util,
    text-builder ^>=0.6.9,

library ast
  import: base
  hs-source-dirs: src/ast
  exposed-modules:
    PosixPath.Ast.Component
    PosixPath.Ast.Name
    PosixPath.Ast.Path

  other-modules:
    PosixPath.Ast.Name.NameSegment

  build-depends:
    QuickCheck >=2.14 && <3,
    attoparsec >=0.13 && <0.15,
    cereal ^>=0.5.8.3,
    cereal-text ^>=0.1.0.2,
    natural-sort ^>=0.1.2,
    posix-path:util,
    rerebase >=1.21 && <2,
    text-builder ^>=0.6.9,

library util
  import: base
  hs-source-dirs: src/util
  exposed-modules:
    PosixPath.Util.List
    PosixPath.Util.MonadPlus
    PosixPath.Util.Prelude

  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.14 && <5,
    hashable >=1.3 && <2,
    text >=1.2 && <3,

test-suite tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/tests
  main-is: Main.hs
  build-depends:
    hspec ^>=2.11.12,
    posix-path,
    quickcheck-classes ^>=0.6.5.0,
    rerebase >=1.21 && <2,
