cabal-version:      3.0
name:               coalmine
version:            0
synopsis:           My evolving toolkit that I come to projects with
description:        Collection of unpolished utils for application development.
homepage:           https://github.com/nikita-volkov/coalmine
bug-reports:        https://github.com/nikita-volkov/coalmine/issues
author:             Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:         Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:          (c) 2019 Nikita Volkov
license:            MIT
license-file:       LICENSE
extra-source-files: domain/*.domain.yaml

common language-settings
  default-language:   Haskell2010
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    ApplicativeDo
    Arrows
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          language-settings
  hs-source-dirs:  libs/main
  exposed-modules:
    Coalmine.AppException
    Coalmine.ArgsParser
    Coalmine.AttoparsecExtras.Text
    Coalmine.BaseExtras.Alternative
    Coalmine.BaseExtras.Applicative
    Coalmine.BaseExtras.Function
    Coalmine.BaseExtras.Integer
    Coalmine.BaseExtras.IO
    Coalmine.BaseExtras.List
    Coalmine.BaseExtras.MonadPlus
    Coalmine.BaseExtras.Monoid
    Coalmine.BaseExtras.Natural
    Coalmine.BaseExtras.NonEmpty
    Coalmine.Building
    Coalmine.CasedText
    Coalmine.CerealExtras.Compact
    Coalmine.CerealExtras.Get
    Coalmine.CerealExtras.Instances
    Coalmine.CerealExtras.Put
    Coalmine.CharPredicates
    Coalmine.CliKit.Clio
    Coalmine.CliKit.Clio.TerminalMarkup
    Coalmine.CliKit.Echo
    Coalmine.Collector
    Coalmine.Comms
    Coalmine.Comms.Codec
    Coalmine.Comms.Readers
    Coalmine.Comms.Schema
    Coalmine.Comms.Streamers
    Coalmine.Comms.Value
    Coalmine.Comms.ValueClass
    Coalmine.Comms.Writers
    Coalmine.ConduitExtras
    Coalmine.ContainersExtras.IntMap
    Coalmine.ContainersExtras.Map
    Coalmine.ContainersExtras.Seq
    Coalmine.ContainersExtras.Set
    Coalmine.DecimalExtras
    Coalmine.DecimalExtras.Instances
    Coalmine.DiffOf
    Coalmine.Domain
    Coalmine.ErrBuilder
    Coalmine.ErrorReport
    Coalmine.ErrReport
    Coalmine.EvenSimplerPaths
    Coalmine.EvenSimplerPaths.AttoparsecHelpers
    Coalmine.EvenSimplerPaths.Charsets
    Coalmine.EvenSimplerPaths.IsomorphismClassHelpers
    Coalmine.EvenSimplerPaths.QuickCheckGens
    Coalmine.EvenSimplerPathsClasses
    Coalmine.EvenSimplerPathsClassesLaws
    Coalmine.Fileset
    Coalmine.FileSystem
    Coalmine.FoldlExtras.Fold
    Coalmine.Formatting
    Coalmine.Formatting.Rendering
    Coalmine.Gen
    Coalmine.GithubActionKit
    Coalmine.HandleService
    Coalmine.HappyPathIO
    Coalmine.HashableExtras
    Coalmine.HCurrying
    Coalmine.HeadedMegaparsecExtras
    Coalmine.HeadedMegaparsecExtras.Text
    Coalmine.Inter
    Coalmine.Interpreter
    Coalmine.Interval
    Coalmine.IsomorphismClasses
    Coalmine.IsomorphismClassesOptics
    Coalmine.IsomorphismClassInstances
    Coalmine.Isomorphisms
    Coalmine.Json
    Coalmine.JsonEncoder
    Coalmine.JsonSchema
    Coalmine.Lingua
    Coalmine.Literal
    Coalmine.Located
    Coalmine.Located.Rendering
    Coalmine.Logger
    Coalmine.MachinesExtras.Mealy
    Coalmine.MegaparsecExtras
    Coalmine.MtlExtras
    Coalmine.MultilineParser
    Coalmine.MultilineTextBuilder
    Coalmine.Name
    Coalmine.NameConversion
    Coalmine.NumericVersion
    Coalmine.OpenApi
    Coalmine.Optics
    Coalmine.Parsed
    Coalmine.Parsing
    Coalmine.PartialEndo
    Coalmine.Predicates
    Coalmine.Prelude
    Coalmine.Printer
    Coalmine.Printing
    Coalmine.PtrKit.Encoding
    Coalmine.PtrKit.Peeker
    Coalmine.PtrKit.PtrIO
    Coalmine.PtrKit.Reader
    Coalmine.PtrKit.Streamer
    Coalmine.PtrKit.ValidatedEncoding
    Coalmine.PtrKit.Writer
    Coalmine.PtrKitQuickCheck.Properties
    Coalmine.PureRandom.Seeded
    Coalmine.PureRandom.SizedSeeded
    Coalmine.QuickCheckExtras.Gens
    Coalmine.Res
    Coalmine.Resilience.IO
    Coalmine.Resilience.RetryPolicy
    Coalmine.Resilient
    Coalmine.RestEasy
    Coalmine.RestEasy.AdaptedRequest.Model
    Coalmine.RestEasy.AdaptedRequest.WaiParsing
    Coalmine.RestEasy.BodyConsumers
    Coalmine.RestEasy.MimeTypeLists
    Coalmine.RestEasy.Responses
    Coalmine.RestEasy.Statuses
    Coalmine.Result
    Coalmine.ScientificExtras
    Coalmine.SemverBase
    Coalmine.Serialization
    Coalmine.Slug
    Coalmine.Special
    Coalmine.Stage
    Coalmine.StdTerminalFormatting
    Coalmine.StmExtras.TBQueue
    Coalmine.StmExtras.TQueue
    Coalmine.Streamer
    Coalmine.SyntaxModelling
    Coalmine.SyntaxModellingQuickCheck
    Coalmine.Tasty
    Coalmine.Tasty.TestTrees
    Coalmine.Tasty.TestTrees.Cereal
    Coalmine.Tasty.TestTrees.HeadedMegaparsec
    Coalmine.TastyMonadic
    Coalmine.TerminalMarkup
    Coalmine.TextAppender
    Coalmine.TextExtras.Text
    Coalmine.TH.Code
    Coalmine.TH.Exp
    Coalmine.TimeExtras.Conversions
    Coalmine.TimeExtras.IO
    Coalmine.TransformersExtras.Cont
    Coalmine.TransformersExtras.Except
    Coalmine.TransformersExtras.Reader
    Coalmine.TransformersExtras.State
    Coalmine.UnorderedContainersExtras.HashMap
    Coalmine.UnorderedContainersExtras.HashSet
    Coalmine.UserErr
    Coalmine.UserErrPrelude
    Coalmine.UserResult
    Coalmine.VectorExtras.Generic
    Coalmine.VectorExtras.Generic.Mutable
    Coalmine.XmlSyntaxParser
    Coalmine.Yaml

  other-modules:
    Coalmine.Inter.Deindentation
    Coalmine.Inter.Syntax.Model
    Coalmine.Inter.Syntax.Parsers
    Coalmine.Inter.TH
    Coalmine.InternalPrelude
    Coalmine.Name.Attoparsec
    Coalmine.Name.Charsets
    Coalmine.Name.Constants
    Coalmine.Name.Gens
    Coalmine.Name.Megaparsec
    Coalmine.XmlSyntaxParser.Attoparsec

  build-depends:
    , acc
    , aeson
    , aeson-unqualified-ast
    , aeson-value-parser
    , attoparsec
    , attoparsec-aeson
    , attoparsec-data
    , case-insensitive
    , cereal
    , cereal-text
    , cereal-unordered-containers
    , cereal-vector
    , conduit
    , data-default
    , data-dword
    , Decimal
    , deferred-folds
    , deque
    , directory
    , domain
    , domain-optics
    , foldl
    , from-sum
    , ghc
    , headed-megaparsec
    , http-media
    , http-types
    , isomorphism-class
    , jsonifier
    , leb128-cereal
    , lift-instances
    , machines
    , megaparsec
    , natural-sort
    , network-ip
    , optics
    , optparse-applicative
    , qq-extras
    , QuickCheck
    , quickcheck-classes
    , quickcheck-instances
    , rerebase
    , semialign
    , structure-kit
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , text-builder
    , text-builder-dev
    , th-lego
    , tuple
    , turtle
    , vector-builder
    , vector-extras
    , vector-th-unbox
    , wai
    , witherable
    , yaml

test-suite tasty
  import:         language-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/tasty
  main-is:        Main.hs
  other-modules:
    TestSuites.BaseExtras.List
    TestSuites.CerealExtras.Compact
    TestSuites.ConduitExtras
    TestSuites.EvenSimplerPaths
    TestSuites.Inter
    TestSuites.Inter.Regressions.FromFormatica
    TestSuites.LocatedRendering
    TestSuites.MegaparsecExtras
    TestSuites.MultilineTextBuilder
    TestSuites.Name
    TestSuites.NumericVersion
    TestSuites.PtrKit
    TestSuites.ScientificExtras
    TestSuites.TimeExtrasConversions

  build-depends:
    , coalmine
    , conduit
    , megaparsec
    , rerebase <2

test-suite open-api-demo
  import:         language-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/open-api-demo
  main-is:        Main.hs
  other-modules:  OpenApiDemo.Model
  build-depends:  coalmine
